--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -104,6 +104,10 @@ header form{
 /* Btn Filter */
 .container-filter{
     display: flex;
+}
+
+.icon-filter{
+    display: flex;
     align-items: center;
     gap: 15px;
 
@@ -115,4 +119,175 @@ header form{
     width: 30px;
     height: 30px;
     stroke: #555;
+}
+
+/* Card List Pokemon */
+.card-list-pokemon{
+    display: grid;
+    grid-template-columns: repeat(4, 1fr);
+    gap: 20px;
+}
+
+.card-pokemon{
+    cursor: pointer;
+    text-decoration: none;
+}
+
+.card-img{
+    background-color: #f2f2f2;
+
+    align-items: center;
+    border-radius: 5px;
+    display: flex;
+    height: 250px;
+    justify-content: center;
+    
+}
+
+.card-img img{
+    width: 100%;
+    height: 100%;
+}
+
+.card-info{
+    padding: 15px;
+}
+
+.card-info h3{
+    color: #333;
+}
+
+.pokemon-id{
+    display: block;
+    color: #888;
+    margin-bottom: 15px;
+}
+
+.card-types{
+    display: flex;
+    gap: 10px;
+    margin-top: 10px;
+}
+
+.card-types span{
+    border-radius: 5px;
+    color: #fff;
+    font-size: 12px;
+    padding: 5px 20px;
+}
+
+/* types of pokemon */
+.water {
+	background-color: var(--color-water);
+}
+
+.grass {
+	background-color: var(--color-grass);
+}
+
+.poison {
+	background-color: var(--color-poison);
+}
+
+.fire {
+	background-color: var(--color-fire);
+}
+
+.bug {
+	background-color: var(--color-bug);
+}
+
+.dragon {
+	background: var(--color-dragon);
+}
+
+.flying {
+	background-color: var(--color-flying);
+}
+
+.ground {
+	background-color: var(--color-ground);
+}
+
+.steel {
+	background-color: var(--color-steel);
+}
+
+.psychic {
+	background-color: var(--color-psychic);
+}
+
+.ice {
+	background-color: var(--color-ice);
+}
+
+.ghost {
+	background-color: var(--color-ghost);
+}
+
+.normal {
+	background-color: var(--color-normal);
+}
+
+.rock {
+	background-color: var(--color-rock);
+}
+
+.electric {
+	background-color: var(--color-electric);
+}
+
+.fighting {
+	background-color: var(--color-fighting);
+}
+
+.fairy {
+	background-color: var(--color-fairy);
+}
+
+.dark {
+	background-color: var(--color-dark);
+}
+
+/* Container Filters */
+.container-filters{
+    display: flex;
+    justify-content: center;
+
+    position: fixed;
+    top: 0;
+    left: -300px;
+    width: 250px;
+
+    color: #555;
+    background-color: #f2f2f2;
+    height: 100%;
+    padding-top: 140px;
+    transition: all .3 linear;
+}
+
+.container-filters.active{
+    left: 0;
+}
+
+.filters-by-type{
+    display: flex;
+    flex-direction: column;
+
+    gap: 20px;
+}
+
+.filters-by-type span{
+    font-weight:700;
+    font-size: 22px;
+}
+
+.group-type{
+    display: flex;
+    gap: 10px;
+    margin-left: 15px;
+}
+
+.group-type label{
+    cursor: pointer;
 }
